Fixed spacing between image and header and list items

--- a/jekyll-code2/_sass/_archive.scss
+++ b/jekyll-code2/_sass/_archive.scss
@@ -28,12 +28,13 @@
   border-bottom: 1px solid $border-color;
 
   + .list__item .archive__item-title {
-    margin-top: 0.5em;
+    margin-top: 0em;
   }
 }
 
 .archive__item-title {
   margin-bottom: 0.25em;
+  margin-top: 0em;
   font-family: $sans-serif-narrow;
 
   a + a {
@@ -67,7 +68,7 @@
     margin-top: -50px;
   }
   display: inline-block;
-  height: 215px;
+  max-height: 215px;
 }
 
 .archive__item:hover {
@@ -86,6 +87,7 @@
    ========================================================================== */
 
 .list__item {
+  margin-bottom: 2em;
   @include breakpoint($medium) {
     padding-right: $right-sidebar-width-narrow;
   }
